--- a/GameCalculator/GameCalculatorLibrary/GameCalculatorLibrary.csproj
+++ b/GameCalculator/GameCalculatorLibrary/GameCalculatorLibrary.csproj
@@ -4,10 +4,12 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UserSecretsId>9cab7c2f-cfe3-40d3-bab5-2acfdc7cac23</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="DAL\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.29" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
   </ItemGroup>
 
 </Project>
