--- a/GameCalculator/GameCalculator/GameCalculator.csproj
+++ b/GameCalculator/GameCalculator/GameCalculator.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\GameCalculatorLibrary\GameCalculatorLibrary.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\js\" />
+  </ItemGroup>
+
 </Project>
